// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Button CTA button - icon after renders correctly 1`] = `
<button
  class="ecl-button ecl-button--call"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      CTA Button with icon
    </span>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-button__icon ecl-button__icon--after"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--corner-arrow"
      />
    </svg>
  </span>
</button>
`;

exports[`EC - Button CTA button - icon after renders correctly with extra attributes 1`] = `
<button
  class="ecl-button ecl-button--call"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      CTA Button with icon
    </span>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-button__icon ecl-button__icon--after"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--corner-arrow"
      />
    </svg>
  </span>
</button>
`;

exports[`EC - Button CTA button - icon after renders correctly with extra class names 1`] = `
<button
  class="ecl-button ecl-button--call custom-class custom-class--test"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      CTA Button with icon
    </span>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-button__icon ecl-button__icon--after"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--corner-arrow"
      />
    </svg>
  </span>
</button>
`;

exports[`EC - Button CTA button - icon before renders correctly 1`] = `
<button
  class="ecl-button ecl-button--call"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--before"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--corner-arrow"
      />
    </svg>
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      Call to action button
    </span>
  </span>
</button>
`;

exports[`EC - Button CTA renders correctly 1`] = `
<button
  class="ecl-button ecl-button--call"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      Call to action button
    </span>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--corner-arrow"
      />
    </svg>
  </span>
</button>
`;

exports[`EC - Button Ghost renders correctly 1`] = `
<button
  class="ecl-button ecl-button--ghost"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      Text button
    </span>
  </span>
</button>
`;

exports[`EC - Button Primary renders correctly 1`] = `
<button
  class="ecl-button ecl-button--primary"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      Primary button
    </span>
  </span>
</button>
`;

exports[`EC - Button Search renders correctly 1`] = `
<button
  class="ecl-button ecl-button--search"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      Search button
    </span>
  </span>
</button>
`;

exports[`EC - Button Secondary renders correctly 1`] = `
<button
  class="ecl-button ecl-button--secondary"
  type="submit"
>
  <span
    class="ecl-button__container"
  >
    <span
      class="ecl-button__label"
      data-ecl-label=""
    >
      Secondary button
    </span>
  </span>
</button>
`;
